--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "naka03-aaa",
   "version": "13.0.0",
-  "description": "เว็บแทงหวยออนไลน์ เว็บแท้หวยของแท้ หวยสด ไม่มีเลขอั้น ปิดรับบิลช้า จ่ายเงินไว ได้เงินแน่ๆ 100% ฝาก-ถอนได้อย่างรวดเร็วและปลอดภัย ผู้คนสามารถฝากเงินเข้าบัญชีและถอนออกเมื่อชนะ หวยสดนี้มีบริการตลอด 24 ชั่วโมง",
+  "description": "เว็บแทงหวยออนไลน์ แทงหวย หวยสด ไม่มีเลขอั้น ไม่มีขั้นต่ำ ฝาก-ถอนได้อย่างรวดเร็วและปลอดภัย",
   "keywords": [
     "หวยสด",
     "เว็บแทงหวยออนไลน์",
-    "หวย",
-    "เล่นหวย",
-    "หวยฮานอย",
-    "หวยเวียดนาม"
+    "แทงหวย"
   ],
   "repository": "https://github.com/mondara123/naka03-aaa",
   "license": "MIT",
