--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naka03-aaa",
+  "name": "เว็บแทงหวยออนไลน์ แทงหวย หวยสด ไม่มีเลขอั้น ไม่มีขั้นต่ำ ",
   "version": "13.0.0",
   "description": "เว็บแทงหวยออนไลน์ แทงหวย หวยสด ไม่มีเลขอั้น ไม่มีขั้นต่ำ ฝาก-ถอนได้อย่างรวดเร็วและปลอดภัย ได้ที่ huaynaka",
   "keywords": [
