--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "naka03-aaa",
-  "version": "13.5.0",
+  "theme": "syntax",
+  "version": "11.0.0",
   "description": "เว็บแทงหวยออนไลน์ แทงหวย หวยสด ไม่มีเลขอั้น ไม่มีขั้นต่ำ ฝาก-ถอนได้อย่างรวดเร็วและปลอดภัย ได้ที่ huaynaka",
   "keywords": [
     "หวยสด",
