--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "เว็บแทงหวยออนไลน์",
     "แทงหวย"
   ],
-  "repository": "https://mondara123@github.com/mondara123/naka03-aaa",
+  "repository": "https://github.com/mondara123/naka03-aaa",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
