--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "เว็บแทงหวยออนไลน้ ที่ huaynakaแทงหวย หวยสด ไม่มีเลขอั้น ไม่มีขั้นต่ำ",
+  "name": "naka03-aaa",
   "theme": "syntax",
   "version": "1.0.0",
   "description": "เว็บแทงหวยออนไลน์ แทงหวย หวยสด ไม่มีเลขอั้น ไม่มีขั้นต่ำ ฝาก-ถอนได้อย่างรวดเร็วและปลอดภัย ได้ที่ huaynaka",
